<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/LocalText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Local"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/LocalScoreText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="14"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="96sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LocalText" />

        <Button
            android:id="@+id/substractLocalScoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="75dp"
            android:text="@string/localMinus1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LocalText" />

        <Button
            android:id="@+id/addOneLocalScoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:text="@string/LocalPlus1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LocalText" />

        <Button
            android:id="@+id/addTwoLocalScoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/localPlus2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addOneLocalScoreBtn" />

        <TextView
            android:id="@+id/VisitanteText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/visitante"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/VisitanteScoreText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="14"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="96sp"
            app:layout_constraintBottom_toTopOf="@+id/VisitanteText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/resetScoreBtn"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/purple_500"
            android:src="@drawable/ic_restore_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/basket_ball"
            android:textColor="@color/text_black"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499"
            tools:text="62" />

        <ImageButton
            android:id="@+id/detallesBtn"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/purple_500"
            android:src="@drawable/ic_arrow_right_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/substractVisitorScoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="65dp"
            android:text="@string/visitorminus1"
            app:layout_constraintBottom_toTopOf="@+id/VisitanteText"
            app:layout_constraintStart_toStartOf="@+id/VisitanteScoreText" />

        <Button
            android:id="@+id/addOneVisitorScoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/visitorPlus1"
            app:layout_constraintBottom_toTopOf="@+id/addTwoVisitorScoreBtn"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/addTwoVisitorScoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:text="@string/visitorplus2"
            app:layout_constraintBottom_toTopOf="@+id/VisitanteText"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>